Now it's possible to use redirect after post pattern.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,8 @@
 	id="WebApp_ID" version="3.1">
 	<display-name>user-management-tool</display-name>
 
-
+	<welcome-file-list>
+		<welcome-file>/welcome</welcome-file>
+	</welcome-file-list>
 
 </web-app>
